# smallmatprep

./: .gitignore  PROJECT.md  README.md  crisp.py  paper.txt  paper_extracted.txt  pyproject.toml  requirements.txt
examples/: config_template.json  run_ai_demo.py  run_constrained_impute_demo.py  run_matimpute_cep_demo.py  run_minimal_demo.py  run_real_electrolyte_demo.py  run_real_electrolyte_impute_benchmark.py  sample_electrolyte.csv
experiments/: bench_steel.py
papers/: README.md
reports/: multi_dataset_validation.csv
smallmatprep/: __init__.py  config_schema.py
smallmatprep/ai/: __init__.py  client.py  config_generator.py  diagnose_reporter.py
smallmatprep/ai/prompts/: config_generator.txt  diagnose_reporter.txt
smallmatprep/data/: __init__.py  loaders.py
smallmatprep/evaluate/: __init__.py  decompose.py  metrics.py
smallmatprep/features/: __init__.py  cep.py
smallmatprep/impute/: __init__.py  baseline.py  constraints.py  iterative.py  material.py
smallmatprep/inspect/: __init__.py  diagnosis.py  missingness.py
smallmatprep/modeling/: __init__.py  recommend.py
smallmatprep/report/: __init__.py  summary.py
tests/: test_ai_module.py  test_core_modules.py  test_decompose.py  test_diagnosis.py  test_matimpute_cep.py
