[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallmatprep"
version = "0.1.0"
description = "Small-sample materials-data diagnostics, domain-aware imputation, and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2"
]

[project.optional-dependencies]
ai = ["openai>=1.0"]

[project.scripts]
smallmatprep-demo = "examples.run_minimal_demo:main"
